--- a/HW_1.ipynb
+++ b/HW_1.ipynb
@@ -29,72 +29,47 @@
       "metadata": {
         "id": "DQUB9TNBGE4p",
         "colab_type": "code",
-        "outputId": "492c57de-b036-47ca-9f98-2b8d11362be5",
+        "outputId": "d2eeab7c-3535-49d8-c3a9-842f7a3ff11e",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 51
+          "height": 85
         }
       },
       "source": [
         "# Michael Siripongpibul CAP4630\n",
+        "import numpy as np\n",
         "def mult_matrix(matrix):\n",
-        "    RowA = len(matrix[0])\n",
-        "    ColA = len(matrix[0][0])\n",
-        "    RowB = len(matrix[1])\n",
-        "    ColB = len(matrix[1][0])\n",
-        "\n",
-        "    if ColA != RowB:\n",
-        "      print(\"Matrices are incompatible\")\n",
-        "      return\n",
-        "\n",
-        "    for x in matrix[0]:\n",
-        "      if len(x) != ColA:\n",
-        "        print(\"First matrix is not a proper matrix\")\n",
-        "        return\n",
-        "\n",
-        "    for x in matrix[1]:\n",
-        "      if len(x) != ColB:\n",
-        "        print(\"Second matrix is not a proper matrix\")\n",
-        "        return\n",
-        "\n",
-        "    answer = [[0]*ColB for i in range(RowA)]\n",
-        "    print(answer)\n",
-        "    i = 0\n",
-        "    j = 0 \n",
-        "    while i < RowA:\n",
-        "      while j < ColB:\n",
-        "        answer[i][j] = multiplyColumn(RowB, ColB, matrix[1], matrix[0][i], j)\n",
-        "        \n",
-        "        j += 1\n",
-        "      j = 0\n",
-        "      i += 1\n",
-        "    print(answer)\n",
-        "  \n",
-        "  \n",
-        "def multiplyColumn(RowB, ColB, arrayB, arrayA, j):\n",
-        "    total = 0\n",
-        "    i = 0\n",
-        "    for x in arrayB:\n",
-        "      total = total + (arrayB[i][j]*arrayA[i])\n",
-        "      i += 1;\n",
-        "    return total;\n",
+        "    length = len(matrix)-1\n",
+        "    result = matrix[0]\n",
+        "    for x in range(length):\n",
+        "      try: \n",
+        "        result = result.dot(matrix[x+1])\n",
+        "      except:\n",
+        "        print(\"Matrix {} is not compatible with the rest\".format(x+1))\n",
+        "    return result \n",
         "\n",
         "\n",
         "\n",
-        "A = [[2,3,5], [4,6,5], [4,1,4],[4,1,4]]\n",
-        "B = [[3,1],[7,8],[4,3]]\n",
+        "\n",
+        "\n",
+        "A = np.array([[2,3,5], [4,6,5], [4,1,4],[4,1,4]])\n",
+        "B = np.array([[3,1],[7,8],[4,3]])\n",
         "C = [A,B]\n",
-        "mult_matrix(C) \n",
+        "result = mult_matrix(C) \n",
+        "print(result);\n",
+        "\n",
         "\n",
         "\n"
       ],
-      "execution_count": 96,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[[0, 0], [0, 0], [0, 0], [0, 0]]\n",
-            "[[47, 41], [74, 67], [35, 24], [35, 24]]\n"
+            "[[47 41]\n",
+            " [74 67]\n",
+            " [35 24]\n",
+            " [35 24]]\n"
           ],
           "name": "stdout"
         }
