--- a/HW_2/Homework2Question3.ipynb
+++ b/HW_2/Homework2Question3.ipynb
@@ -6,7 +6,7 @@
       "name": "Homework2Question3.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOIYuWuk6QddGY5Nht8fw2x",
+      "authorship_tag": "ABX9TyNhWZ4/n1U9DOCOug+OkgPo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,6 +40,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LeHFku9yDB-c",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Imports"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "3LUUh086z1B9",
@@ -54,6 +64,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-0PAhPpbDSxe",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Average MINST Digit Calculation"
+      ]
     },
     {
       "cell_type": "code",
@@ -93,6 +113,29 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "l8xJVjeODhtN",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Display Average"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cjyUAAVRDhS0",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
