--- a/HW_2/Homework2Question1.ipynb
+++ b/HW_2/Homework2Question1.ipynb
@@ -3,10 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Homework2Question1.ipynb",
+      "name": "Copy of Homework2Question1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPaQzew5U5vOBXR9rJjBQlH",
+      "authorship_tag": "ABX9TyOxpCPrDb5O39ggBkR8BO2G",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,6 +54,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FqfyoJI7Dyyj",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Minimum"
+      ]
     },
     {
       "cell_type": "code",
@@ -124,6 +134,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HWOoBTG-D3IR",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Maximum"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "2oD_ea_xLHN5",
@@ -189,6 +209,16 @@
             "tags": []
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8qhZFllKD5s5",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Neither"
       ]
     },
     {
