--- a/HW_2/Homework2Question2.ipynb
+++ b/HW_2/Homework2Question2.ipynb
@@ -3,10 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Homework2Question2.ipynb",
+      "name": "Copy of Homework2Question2.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMG7sZsEWHZ+fJP6BwGhEe6",
+      "authorship_tag": "ABX9TyM63gqkt2EV2BdjgEPh/M1b",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,6 +40,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "avgqisfyE_un",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Imports"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "scNPLVJnRSPb",
@@ -60,6 +70,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "M2-57I6jFDSb",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Generate m random pairs (x, y)"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "nXZ4gPeJReDv",
@@ -68,7 +88,6 @@
       },
       "source": [
         "\n",
-        "# generate m random pairs (x, y)\n",
         "\n",
         "m = 100\n",
         "X = 2 * np.random.rand(m, 1)\n",
@@ -171,6 +190,16 @@
             "tags": []
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "KRxT9FjYE4eV",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Mini-batch Gradient Descent"
       ]
     },
     {
