--- a/HW_3/HW_3.ipynb
+++ b/HW_3/HW_3.ipynb
@@ -6,7 +6,7 @@
       "name": "HW_3.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP2Cj0UIq8PhWYIOzrmNirN",
+      "authorship_tag": "ABX9TyMIbQ7xZp6+3spNBPvVQ0rb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -101,6 +101,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "b8mUAibf06mI",
+        "colab_type": "text"
+      },
+      "source": [
+        "display_random_Data takes parameters of arrays labels and data to create a scatterplot of points in data."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "HFi5kGAoNi1T",
@@ -158,6 +168,16 @@
       },
       "source": [
         "# Question 2 Logistic Regression with Keras"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qnZHebPH1TV6",
+        "colab_type": "text"
+      },
+      "source": [
+        "Splits the data generated in question 1 and uses keras to implement logistic regression with two included features. Then plots 2 lines separating the blue and red dots; One is the actual and the other is predicted by logistic regression."
       ]
     },
     {
@@ -590,7 +610,8 @@
         "colab_type": "text"
       },
       "source": [
-        "# HeatMap Visualization of model"
+        "# HeatMap Visualization of model\n",
+        "to visualize $f: R^2 -> R$ "
       ]
     },
     {
