--- a/HW_4/HW_4.ipynb
+++ b/HW_4/HW_4.ipynb
@@ -6,7 +6,7 @@
       "name": "Homework4Question1",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOKC4i2D1JcfTs39aju73+4",
+      "authorship_tag": "ABX9TyNC960zAghmeJS7Crl8GIxr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -115,7 +115,7 @@
       "metadata": {
         "id": "plxv3Ac75Jm8",
         "colab_type": "code",
-        "outputId": "e21311bc-54f2-4740-d45f-388f7a2ef1ef",
+        "outputId": "e9a27126-7e39-4a7b-ddbb-51985ab73c5d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 374
@@ -191,11 +191,11 @@
         "  # uncomment line for student code testing\n",
         "  output_mat = conv2d(input_mat[i], kernel_mat[i])\n",
         "\n",
-        "  # uncomment lines below (and comment line above) for generating test cases.\n",
-        "  if input_mat[i].shape[0] < kernel_mat[i].shape[0]:\n",
-        "    output_mat = []\n",
-        "  else:\n",
-        "    output_mat = signal.convolve2d(input_mat[i], kernel_mat[i], mode='valid')\n",
+        "  # # uncomment lines below (and comment line above) for generating test cases.\n",
+        "  # if input_mat[i].shape[0] < kernel_mat[i].shape[0]:\n",
+        "  #   output_mat = []\n",
+        "  # else:\n",
+        "  #   output_mat = signal.convolve2d(input_mat[i], kernel_mat[i], mode='valid')\n",
         "\n",
         "  print(output_mat)\n",
         "  if np.array_equal(output_mat, expected_mat[i]):\n",
@@ -203,27 +203,27 @@
         "  else:\n",
         "    print(\"Incorrect output!\\n\")"
       ],
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[[2 4 2]\n",
-            " [4 2 4]\n",
-            " [2 4 2]]\n",
+            "[[2. 4. 2.]\n",
+            " [4. 2. 4.]\n",
+            " [2. 4. 2.]]\n",
             "Correct output!\n",
             "\n",
-            "[[2 0 0]\n",
-            " [0 2 0]\n",
-            " [0 0 2]]\n",
+            "[[2. 0. 0.]\n",
+            " [0. 2. 0.]\n",
+            " [0. 0. 2.]]\n",
             "Correct output!\n",
             "\n",
-            "[[ 1 -1  0]\n",
-            " [-1  1 -1]\n",
-            " [ 0 -1  1]]\n",
+            "[[ 1. -1.  0.]\n",
+            " [-1.  1. -1.]\n",
+            " [ 0. -1.  1.]]\n",
             "Correct output!\n",
             "\n",
-            "[[4]]\n",
+            "[[4.]]\n",
             "Correct output!\n",
             "\n",
             "[]\n",
