--- a/HW_4/Homework4Question2.ipynb
+++ b/HW_4/Homework4Question2.ipynb
@@ -6,7 +6,7 @@
       "name": "Homework4Question2",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOw455t3HYbnlNHlFlufhKX",
+      "authorship_tag": "ABX9TyOT1+0ug99G9pCR/srz880j",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,7 +57,9 @@
         "def maxpooling2d(input_mat, s):\n",
         "\n",
         "    #Error Generation if size of Kernel is larger/returns empty array\n",
+        "    #Prints an error instead of raise exception since we want to return an empty array\n",
         "  if(np.shape(input_mat) < (s,s)):\n",
+        "    print(\"Error: Filter is larger than the Input Matrix\")\n",
         "    return []\n",
         "  \n",
         "    #Width and Length of outerloop\n",
@@ -103,11 +105,11 @@
       "metadata": {
         "id": "M_9I1Fr3JrHM",
         "colab_type": "code",
+        "outputId": "707726da-bb1d-4389-fc97-2f391490d26d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 187
-        },
-        "outputId": "6c29d000-8fc5-49dc-f521-85844909c9e9"
+        }
       },
       "source": [
         "import skimage.measure\n",
@@ -163,7 +165,7 @@
         "  else:\n",
         "    print(\"Incorrect output!\")"
       ],
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
