--- a/HW_5/Homework5.ipynb
+++ b/HW_5/Homework5.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Homework5",
       "provenance": [],
-      "authorship_tag": "ABX9TyOOaP4GDM4SB6PSaZgw9aoH",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyM3l2mVZFlZ5x/6dPL68vGU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,6 +39,90 @@
       "cell_type": "markdown",
       "metadata": {
         "id": "j9G1GB5YbsvL",
+        "colab_type": "text"
+      },
+      "source": [
+        "#1. General Concepts\n",
+        "Sources found here at: https://pathmind.com/wiki/ai-vs-machine-learning-vs-deep-learning"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fBE8p9jpgJ5Z",
+        "colab_type": "text"
+      },
+      "source": [
+        "Artificial intelligence, machine learning and deep learning are terms often used to describe intelligent software and is commonly used interchangeably. However, machine learning is a subset of artificial intelligence and deep learning is a subset of machine learning.\n",
+        "\n",
+        "$AI > ML > DL$"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "tfxPmfgOfYV-",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Artificial Intelligence (AI)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "uw8Vf0cCgZIm",
+        "colab_type": "text"
+      },
+      "source": [
+        "A common description of Artificial Intelligence is the capability of a machine to imitate intelligent human behavior. Imitating human behavior is a very broad term and so is AI. The range of AI can begin from a pile of simple if-then statements, to a more complex algorithm.\n",
+        "If the pile of if-then statements are gathered into a collection, it forms Symbolic Artificial Intelligence.\n",
+        "\n",
+        "Symbolic AI operates in the form of:\n",
+        "\n",
+        "\n",
+        " \\begin{pmatrix}\n",
+        "  Input & \\cdots > & + & \\cdots & + \\\\\n",
+        "    & & \\vdots &  & \\vdots & \\cdots > & Output \\\\\n",
+        "  Rules & \\cdots > & + & \\cdots & +\n",
+        " \\end{pmatrix}\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "il9YdSw0fYsB",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Machine Learning (ML)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PeCYrR1hgZ4T",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "W866jRddfZAi",
+        "colab_type": "text"
+      },
+      "source": [
+        "##Deep Learnin (DL)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "U_gKPnqZfZdU",
         "colab_type": "text"
       },
       "source": [
