--- a/HW_5/Homework5.ipynb
+++ b/HW_5/Homework5.ipynb
@@ -6,7 +6,7 @@
       "name": "Homework5",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM3l2mVZFlZ5x/6dPL68vGU",
+      "authorship_tag": "ABX9TyOvyDfbLOnJNrTds5JjS2pK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -79,6 +79,17 @@
         "If the pile of if-then statements are gathered into a collection, it forms Symbolic Artificial Intelligence.\n",
         "\n",
         "Symbolic AI operates in the form of:\n",
+        "\n",
+        "\n",
+        "\n",
+        ">$A_{m,n} =\n",
+        " \\begin{pmatrix}\n",
+        "  a_{1,1} & a_{1,2} & \\cdots & a_{1,n} \\\\\n",
+        "  a_{2,1} & a_{2,2} & \\cdots & a_{2,n} \\\\\n",
+        "  \\vdots  & \\vdots  & \\ddots & \\vdots  \\\\\n",
+        "  a_{m,1} & a_{m,2} & \\cdots & a_{m,n}\n",
+        " \\end{pmatrix}$\n",
+        "\n",
         "\n",
         "\n",
         " \\begin{pmatrix}\n",
