--- a/HW_5/Homework5.ipynb
+++ b/HW_5/Homework5.ipynb
@@ -6,7 +6,7 @@
       "name": "Homework5",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOBJGz7TY/xz6YrFxZ8x7+T",
+      "authorship_tag": "ABX9TyP8nAKBg30o+K7Ldu1gfsWA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -106,7 +106,21 @@
         "colab_type": "text"
       },
       "source": [
-        ""
+        "The subset of Artificial Intelligence, Machine Learning, focuses on the system that is able to modify itself without human intervention; Machine Learning is dynamic and creates rules from the input and output unlike Symbolic AI.\n",
+        "ML, when exposed to new data, will attempt to minimize error and increase the accuracy of predictions as an optimization algorithm.\n",
+        "\n",
+        "\n",
+        "Machine Learning operates in the form of:\n",
+        "\n",
+        "\n",
+        "\n",
+        "$\n",
+        " \\begin{pmatrix}\n",
+        "  Input & \\cdots > & + & \\cdots & + \\\\\n",
+        "    & & \\vdots &  & \\vdots & \\cdots > & Rules \\\\\n",
+        "  Output & \\cdots > & + & \\cdots & +\n",
+        " \\end{pmatrix}\n",
+        "$"
       ]
     },
     {
@@ -128,6 +142,19 @@
       "source": [
         ""
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZpJt63b5UiDV",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
