--- a/HW_5/Homework5.ipynb
+++ b/HW_5/Homework5.ipynb
@@ -6,7 +6,7 @@
       "name": "Homework5",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP8nAKBg30o+K7Ldu1gfsWA",
+      "authorship_tag": "ABX9TyMCAzIhSKV+vCFW6halY1oK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -78,8 +78,16 @@
         "A common description of Artificial Intelligence is the capability of a machine to imitate intelligent human behavior. Imitating human behavior is a very broad term and so is AI. The range of AI can begin from a pile of simple if-then statements, to a more complex algorithm.\n",
         "If the pile of if-then statements are gathered into a collection, it forms Symbolic Artificial Intelligence.\n",
         "\n",
-        "Symbolic AI operates in the form of:\n",
-        "\n",
+        "Symbolic AI operates in the form of:"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bJW3b3RcU7Sx",
+        "colab_type": "text"
+      },
+      "source": [
         "$\n",
         " \\begin{pmatrix}\n",
         "  Input & \\cdots > & + & \\cdots & + \\\\\n",
@@ -110,9 +118,16 @@
         "ML, when exposed to new data, will attempt to minimize error and increase the accuracy of predictions as an optimization algorithm.\n",
         "\n",
         "\n",
-        "Machine Learning operates in the form of:\n",
-        "\n",
-        "\n",
+        "Machine Learning operates in the form of:\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ItxXBsMmVBMl",
+        "colab_type": "text"
+      },
+      "source": [
         "\n",
         "$\n",
         " \\begin{pmatrix}\n",
