--- a/HW_5/Homework5.ipynb
+++ b/HW_5/Homework5.ipynb
@@ -6,7 +6,7 @@
       "name": "Homework5",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMCAzIhSKV+vCFW6halY1oK",
+      "authorship_tag": "ABX9TyOqN0pggRCM13aYxIz0o/DB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -129,13 +129,12 @@
       },
       "source": [
         "\n",
-        "$\n",
-        " \\begin{pmatrix}\n",
+        "\n",
+        " $\\begin{pmatrix}\n",
         "  Input & \\cdots > & + & \\cdots & + \\\\\n",
         "    & & \\vdots &  & \\vdots & \\cdots > & Rules \\\\\n",
         "  Output & \\cdots > & + & \\cdots & +\n",
-        " \\end{pmatrix}\n",
-        "$"
+        " \\end{pmatrix}$\n"
       ]
     },
     {
