--- a/HW_5/Homework5.ipynb
+++ b/HW_5/Homework5.ipynb
@@ -6,7 +6,7 @@
       "name": "Homework5",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOqN0pggRCM13aYxIz0o/DB",
+      "authorship_tag": "ABX9TyN1Ogarc6yOZasbtOX1SuPb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -130,11 +130,11 @@
       "source": [
         "\n",
         "\n",
-        " $\\begin{pmatrix}\n",
+        " $\\begin{matrix}\n",
         "  Input & \\cdots > & + & \\cdots & + \\\\\n",
         "    & & \\vdots &  & \\vdots & \\cdots > & Rules \\\\\n",
         "  Output & \\cdots > & + & \\cdots & +\n",
-        " \\end{pmatrix}$\n"
+        " \\end{matrix}$\n"
       ]
     },
     {
@@ -146,6 +146,19 @@
       "source": [
         "##Deep Learnin (DL)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "a3SvWyCMV0f1",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
