--- a/HW_5/Homework5.ipynb
+++ b/HW_5/Homework5.ipynb
@@ -6,7 +6,7 @@
       "name": "Homework5",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN1Ogarc6yOZasbtOX1SuPb",
+      "authorship_tag": "ABX9TyOc+G3wbbXByDidA0cZo1Xt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -89,11 +89,11 @@
       },
       "source": [
         "$\n",
-        " \\begin{pmatrix}\n",
+        " \\begin{matrix}\n",
         "  Input & \\cdots > & + & \\cdots & + \\\\\n",
         "    & & \\vdots &  & \\vdots & \\cdots > & Output \\\\\n",
         "  Rules & \\cdots > & + & \\cdots & +\n",
-        " \\end{pmatrix}\n",
+        " \\end{matrix}\n",
         "$"
       ]
     },
