--- a/HW_5/Homework5.ipynb
+++ b/HW_5/Homework5.ipynb
@@ -6,7 +6,7 @@
       "name": "Homework5",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOc+G3wbbXByDidA0cZo1Xt",
+      "authorship_tag": "ABX9TyNHNM+YHbHKva1b0LOQEwrI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -88,7 +88,7 @@
         "colab_type": "text"
       },
       "source": [
-        "$\n",
+        "$AI =\n",
         " \\begin{matrix}\n",
         "  Input & \\cdots > & + & \\cdots & + \\\\\n",
         "    & & \\vdots &  & \\vdots & \\cdots > & Output \\\\\n",
@@ -130,11 +130,12 @@
       "source": [
         "\n",
         "\n",
-        " $\\begin{matrix}\n",
+        " $ML =\n",
+        "  \\begin{matrix}\n",
         "  Input & \\cdots > & + & \\cdots & + \\\\\n",
         "    & & \\vdots &  & \\vdots & \\cdots > & Rules \\\\\n",
         "  Output & \\cdots > & + & \\cdots & +\n",
-        " \\end{matrix}$\n"
+        " \\end{matrix} $\n"
       ]
     },
     {
@@ -148,19 +149,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "a3SvWyCMV0f1",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "U_gKPnqZfZdU",
@@ -169,19 +157,6 @@
       "source": [
         ""
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ZpJt63b5UiDV",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
     }
   ]
 }
