--- a/HW_5/Homework5.ipynb
+++ b/HW_5/Homework5.ipynb
@@ -6,7 +6,7 @@
       "name": "Homework5",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNHNM+YHbHKva1b0LOQEwrI",
+      "authorship_tag": "ABX9TyOrSmrNHrtYR/xwtTTODy0y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -145,7 +145,7 @@
         "colab_type": "text"
       },
       "source": [
-        "##Deep Learnin (DL)"
+        "##Deep Learning (DL)"
       ]
     },
     {
@@ -155,8 +155,31 @@
         "colab_type": "text"
       },
       "source": [
-        ""
+        "As a subset of Machine learning, Deep Learning utilizes neural networks, or set of algorithms designed to recognize certain patterns. DL attemps to map it's inputs to outputs and finds a correlation in the process of learning; Deep also refers to the number of layers in a neural network.\n",
+        "\n",
+        "\n",
+        "*   \"a field of study that gives computers the ability to learn without being explicitly programmed\" - Arthur Samuel\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "H1I9-rrWlCep",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
