--- a/HW_5/Homework5.ipynb
+++ b/HW_5/Homework5.ipynb
@@ -6,7 +6,7 @@
       "name": "Homework5",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOrSmrNHrtYR/xwtTTODy0y",
+      "authorship_tag": "ABX9TyMveF9Ii8Ea+lKhThdFUM97",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -169,17 +169,100 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "H1I9-rrWlCep",
-        "colab_type": "code",
-        "colab": {}
+        "id": "YkkmpMkd3jb9",
+        "colab_type": "text"
       },
       "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
+        "#2. Basic Concepts"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "nn6d8auc3qJz",
+        "colab_type": "text"
+      },
+      "source": [
+        "##Linear Regression"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mC42nbSEGUwa",
+        "colab_type": "text"
+      },
+      "source": [
+        "Linear regression models the relationship between a dependent variable and one or more independent variables; This is considered a common statistical data analysis technique and can be considered simple linear regression or multiple linear regression depending on the number of independent variables.\n",
+        "This model assumes the relationship between the variables are linear.\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "In Machine Learning, the ***simple linear regression*** equation for a model is as follows:\n",
+        "\n",
+        "\n",
+        "\n",
+        "$Where:$\n",
+        "\n",
+        "$y = $ the predicted label\n",
+        "\n",
+        "$b = $ the bias\n",
+        "\n",
+        "$w_{1} = $ the weight of feature 1, or slope\n",
+        "\n",
+        "$x_{1} = $ a feature or known input\n",
+        "\n",
+        "The Model is $y = b + w_{1}x_{1}$\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "In multiple linear regression with two or more independent variables, each feature $x_{1},x_{2}... x_{n} $ each contains a separate weight of $w_{1},w_{2}... w_{n} $\n",
+        "\n",
+        "An example of a model with 3 independent variables will look like this:\n",
+        "\n",
+        "The model is $y = b + w_{1}x_{1} + w_{2}x_{2} + w_{3}x_{3}$ = b + $\\sum_{j=1}^3 w_{j}x_{j}$\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XckYrMue3p9P",
+        "colab_type": "text"
+      },
+      "source": [
+        "##Logistic Regression"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hWY7KOIx3pop",
+        "colab_type": "text"
+      },
+      "source": [
+        "##Gradients"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "CaIcGA3f3pJT",
+        "colab_type": "text"
+      },
+      "source": [
+        "##Gradient Descent"
+      ]
     }
   ]
 }
