--- a/HW_5/Homework5.ipynb
+++ b/HW_5/Homework5.ipynb
@@ -6,7 +6,7 @@
       "name": "Homework5",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMveF9Ii8Ea+lKhThdFUM97",
+      "authorship_tag": "ABX9TyPYmnnwW73Ee8d2dFR7Wvgk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -221,7 +221,7 @@
         "\n",
         "---\n",
         "\n",
-        "In multiple linear regression with two or more independent variables, each feature $x_{1},x_{2}... x_{n} $ each contains a separate weight of $w_{1},w_{2}... w_{n} $\n",
+        "In ***multiple linear regression*** with two or more independent variables, each feature $x_{1},x_{2}... x_{n} $ each contains a separate weight of $w_{1},w_{2}... w_{n} $\n",
         "\n",
         "An example of a model with 3 independent variables will look like this:\n",
         "\n",
@@ -242,6 +242,20 @@
       },
       "source": [
         "##Logistic Regression"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gGi5kNsMUHNp",
+        "colab_type": "text"
+      },
+      "source": [
+        "Logistic regression is a classification algorithm and very similar to linear regression but the independent variable are not numbers, instead similar to yes/no or 1/0 responses. This is mainly used for prediction of the dependent variable's category; the weighted sum of the inputs pass through a sigmoid function to map the values between 0 and 1.\n",
+        "\n",
+        "The equation for ***logistic regression*** is:\n",
+        "\n",
+        "$log\\frac{y}{1-y} = b_{0} + b_{1}x_{1} + b_{2}x_{2} + b_{3}x_{3} + ... + b_{n}x_{n}$\n"
       ]
     },
     {
