--- a/HW_5/Homework5.ipynb
+++ b/HW_5/Homework5.ipynb
@@ -6,7 +6,7 @@
       "name": "Homework5",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPYmnnwW73Ee8d2dFR7Wvgk",
+      "authorship_tag": "ABX9TyOeQxPiv6ilsrrca0w5MZEM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -265,7 +265,44 @@
         "colab_type": "text"
       },
       "source": [
-        "##Gradients"
+        "##Gradients & Gradient Descent"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mvWfELBtYM1v",
+        "colab_type": "text"
+      },
+      "source": [
+        "A gradient descent is a *optimization* algorithm when training a model. Assuming the loss function of a model to be convex and has only one minimum,\n",
+        "calculating the loss function for all parameter values is inefficient for finding it. \n",
+        "\n",
+        "Gradient descent picks a starting value and calculates the loss function and decides which why is \"warmer\" or \"colder\" depending on the increase of the loss function. The algorithm uses a learning rate to decide how far to take a step to the next point; Eventually it converges upon a minimum.\n",
+        "\n",
+        "Types of gradient descent mainly are separated by the amount of data used:\n",
+        "\n",
+        "**Batch Gradient Descent:**\n",
+        "The standard original model that calcuates the error only after all examples have been evaluated. The batch size is the size of the training set.\n",
+        "\n",
+        "\n",
+        "**Stochastic Gradient Desecent (SGD):**\n",
+        "\n",
+        "SGD updates the parameters after training each example 1 by 1. The batch size is one.\n",
+        "\n",
+        "\n",
+        "**Mini-Batch Gradient Descent:**\n",
+        "\n",
+        "The training set is split into batches and is the most common type for deep learning. A mixture of batch gradient descent and SGD, mini-match gradient descent updates the parameters after a specified amount of batch size has been evaluated.\n",
+        "The batch size is 1 < n < size of training set.\n",
+        "\n",
+        "\n",
+        "The gradient descent algorithm updates the starting point as follows: \n",
+        "\n",
+        "$w <= w - a Δ L $\n",
+        "\n",
+        "where $a$ is the learning rate.\n",
+        "\n"
       ]
     },
     {
@@ -275,7 +312,7 @@
         "colab_type": "text"
       },
       "source": [
-        "##Gradient Descent"
+        "##3. Building a Model"
       ]
     }
   ]
