--- a/HW_5/Homework5.ipynb
+++ b/HW_5/Homework5.ipynb
@@ -6,7 +6,7 @@
       "name": "Homework5",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOeQxPiv6ilsrrca0w5MZEM",
+      "authorship_tag": "ABX9TyNTtnWJxlTC1sPy23kB5BoS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -299,9 +299,9 @@
         "\n",
         "The gradient descent algorithm updates the starting point as follows: \n",
         "\n",
-        "$w <= w - a Δ L $\n",
+        "$w <= w - \\alpha \\nabla\t L $\n",
         "\n",
-        "where $a$ is the learning rate.\n",
+        "where $\\alpha$ is the learning rate.\n",
         "\n"
       ]
     },
